# raindom

./: Cargo.toml  README.md  setup-ollama.sh
.github/: settings.yml
src/: cli.rs  error.rs  main.rs  utils.rs
